fixing fixed-nav-bar on mobile

--- a/sheets/stylesheet.css
+++ b/sheets/stylesheet.css
@@ -134,6 +134,10 @@ span.highlight {
   body { padding-top: 70px; }
 }
 
+@media screen and (max-width: 768px) {
+  body { padding-top: 160px; }
+}
+
 a.active {
   color: rgb(0, 0, 0);
   text-decoration-color: azure;
